--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Flask Starter</title>
+  <title>Workshop</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/coffee.svg" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
